# jaql

./: .clang-format  .clang-tidy  .conanrc  .cursorignore  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  conanfile.py  pyproject.toml
.cursor/: mcp.json.example
.cursor/hooks/: format-cpp.sh
.cursor/rules/: jaql-cmake-build.mdc  jaql-cpp-standards.mdc  jaql-docs-adr.mdc  jaql-project.mdc  jaql-testing.mdc
.cursor/skills/jaql-commit-message/: SKILL.md
.cursor/skills/jaql-new-adr/: SKILL.md
.cursor/skills/jaql-new-module/: SKILL.md
.cursor/skills/jaql-new-test/: SKILL.md
.github/: copilot-instructions.md
.github/prompts/: commit-message.prompt.md  new-adr.prompt.md  new-module.prompt.md  new-test.prompt.md
.github/workflows/: ci.yml
benchmarks/: black_scholes_benchmark.cpp
benchmarks/core/: CMakeLists.txt  bench_result.cpp
cmake/: CompilerWarnings.cmake  JaqlDoxygen.cmake  JaqlModule.cmake  Sanitizers.cmake
docs/: Doxyfile.in  api-mainpage.md  build-system.md  coding-standards.md  contributing.md  roadmap.md  tech-stack.md  testing-strategy.md
docs/adr/: ADR-0001-conan2-package-manager.md
docs/architecture/: design-principles.md  module-dependencies.md  overview.md
docs/dev/: cursor-workflow.md  phase0.md  phase1.md  setup.md  vscode-workflow.md
include/jaql/: calendar.hpp  curves.hpp  date.hpp  day_count.hpp  greeks.hpp  instruments.hpp  monte_carlo.hpp
include/jaql/core/: assert.hpp  date.hpp  error.hpp  result.hpp  strong_type.hpp
include/jaql/infra/: logger.hpp
profiles/ci/: clang17-libcxx  gcc13
profiles/local/: README.md
python/: bindings.cpp
scripts/: bootstrap.sh  check_docs.sh  check_headers.sh  common.sh  format.sh  lint.sh  test.sh
src/: CMakeLists.txt  calendar.cpp  curves.cpp  date.cpp  day_count.cpp  greeks.cpp  instruments.cpp  monte_carlo.cpp
src/core/: CMakeLists.txt  date.cpp  error.cpp
src/curves/: CMakeLists.txt
src/infra/: CMakeLists.txt  logger.cpp
src/instruments/: CMakeLists.txt
src/market/: CMakeLists.txt
src/math/: CMakeLists.txt
src/portfolio/: CMakeLists.txt
src/pricing/: CMakeLists.txt
src/risk/: CMakeLists.txt
src/simulation/: CMakeLists.txt
tests/: .clang-tidy  CMakeLists.txt
tests/cpp/: test_date_and_day_count.cpp  test_greeks.cpp  test_instruments_and_curves.cpp
tests/integration/: CMakeLists.txt
tests/python/: test_bindings.py
tests/unit/core/: CMakeLists.txt  test_assert.cpp  test_date.cpp  test_error.cpp  test_result.cpp  test_strong_type.cpp
tests/unit/infra/: CMakeLists.txt  test_logger.cpp
