add_subdirectory(unit/infra)
add_subdirectory(unit/core)
add_subdirectory(unit/math)
add_subdirectory(unit/instruments)
add_subdirectory(unit/market)
add_subdirectory(unit/curves)
add_subdirectory(unit/pricing)
add_subdirectory(unit/simulation)
add_subdirectory(unit/risk)
add_subdirectory(unit/portfolio)
add_subdirectory(integration)
